fixed z-index

--- a/app/scss/assets/base-assets/collection.scss
+++ b/app/scss/assets/base-assets/collection.scss
@@ -9,6 +9,7 @@
   overflow: hidden;
   white-space: nowrap;
   transform: translate(-50%, -50%);
+  z-index: 5;
   @media screen and (min-width: 2100px) {
     height: 34em;
   }
