--- a/app/scss/assets/base-assets/nav.scss
+++ b/app/scss/assets/base-assets/nav.scss
@@ -17,6 +17,7 @@
   left: 3.4em;
   top: 0;
   position: absolute;
+  z-index: 9;
   @media screen and (max-width: 3840px) {
     width: 90em;
     left: 6em;
