--- a/app/scss/base.scss
+++ b/app/scss/base.scss
@@ -27,8 +27,10 @@ body {
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: -1;
-        background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png');
+        z-index: 3;
+        background: url('http://alanpride.com/admin/images/BG_Radial_gradient.png') no-repeat;
+        background-size: cover;
+        background-position: center center;
     }
     &--inner {
         background: url('https://i.imgur.com/Z2lWU8K.jpg');
@@ -58,6 +60,7 @@ body {
     top: 3em;
     left: 50%;
     transform: translate(-50%, 10em);
+    z-index: 9;
     @media screen and (min-width: 3840px) {
         width: 176em;
     }
